refactor(api): Fix service layer issues discovered during testing
Services:
- ConversationService: Fix null participant handling
- FileStorageService: Improve error handling for MinIO operations
- FriendService: Fix bidirectional friend operations
- GroupService: Fix member management edge cases
- MessageService: Fix recall time validation

Entities:
- Fix enum naming for better consistency
- Add missing builder defaults

Repositories:
- Add missing query methods for testing

DTOs:
- Fix response mapping for all domain objects

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>